test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-unmanaged-from-nonnil-owned.good
init-field-arg-nonnil-unmanaged-from-nonnil-owned.chpl:9: In initializer:
init-field-arg-nonnil-unmanaged-from-nonnil-owned.chpl:10: error: cannot initialize field MyRecord.lhs of type 'unmanaged MyClass' from a 'owned MyClass'
  init-field-arg-nonnil-unmanaged-from-nonnil-owned.chpl:14: called as MyRecord.init(rhs: owned MyClass)
